split date col to m, y, d columns

--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -329,9 +329,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sd_id</th>\n",
+       "      <th>stock_name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>__index_level_0__</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL2010-01-04</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>7.622500</td>\n",
+       "      <td>7.660714</td>\n",
+       "      <td>7.585000</td>\n",
+       "      <td>7.643214</td>\n",
+       "      <td>6.515213</td>\n",
+       "      <td>493729600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADBE2010-01-04</td>\n",
+       "      <td>ADBE</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>36.650002</td>\n",
+       "      <td>37.299999</td>\n",
+       "      <td>36.650002</td>\n",
+       "      <td>37.090000</td>\n",
+       "      <td>37.090000</td>\n",
+       "      <td>4710200</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMZN2010-01-04</td>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>6.812500</td>\n",
+       "      <td>6.830500</td>\n",
+       "      <td>6.657000</td>\n",
+       "      <td>6.695000</td>\n",
+       "      <td>6.695000</td>\n",
+       "      <td>151998000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CRM2010-01-04</td>\n",
+       "      <td>CRM</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>18.652500</td>\n",
+       "      <td>18.882500</td>\n",
+       "      <td>18.547501</td>\n",
+       "      <td>18.705000</td>\n",
+       "      <td>18.705000</td>\n",
+       "      <td>7906000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CSCO2010-01-04</td>\n",
+       "      <td>CSCO</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>24.110001</td>\n",
+       "      <td>24.840000</td>\n",
+       "      <td>24.010000</td>\n",
+       "      <td>24.690001</td>\n",
+       "      <td>17.394129</td>\n",
+       "      <td>59853700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45083</th>\n",
+       "      <td>MSFT2022-03-16</td>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>289.109985</td>\n",
+       "      <td>294.570007</td>\n",
+       "      <td>283.200012</td>\n",
+       "      <td>294.390015</td>\n",
+       "      <td>292.260193</td>\n",
+       "      <td>37826300</td>\n",
+       "      <td>3071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45084</th>\n",
+       "      <td>NFLX2022-03-16</td>\n",
+       "      <td>NFLX</td>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>348.200012</td>\n",
+       "      <td>359.989990</td>\n",
+       "      <td>343.059998</td>\n",
+       "      <td>357.529999</td>\n",
+       "      <td>357.529999</td>\n",
+       "      <td>6982500</td>\n",
+       "      <td>3071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45085</th>\n",
+       "      <td>NVDA2022-03-16</td>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>235.000000</td>\n",
+       "      <td>245.970001</td>\n",
+       "      <td>231.720001</td>\n",
+       "      <td>244.960007</td>\n",
+       "      <td>244.772858</td>\n",
+       "      <td>67142200</td>\n",
+       "      <td>3071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45086</th>\n",
+       "      <td>ORCL2022-03-16</td>\n",
+       "      <td>ORCL</td>\n",
+       "      <td>2022-03-16</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>81.230003</td>\n",
+       "      <td>77.750000</td>\n",
+       "      <td>79.959999</td>\n",
+       "      <td>78.593552</td>\n",
+       "      <td>14071300</td>\n",
+       "      <td>3071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45087</th>\n",
+       "      <td>TSLA2022-09-12</td>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>2022-09-12</td>\n",
+       "      <td>300.720001</td>\n",
+       "      <td>305.489990</td>\n",
+       "      <td>300.399994</td>\n",
+       "      <td>304.420013</td>\n",
+       "      <td>304.420013</td>\n",
+       "      <td>48674600</td>\n",
+       "      <td>3071</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45088 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                sd_id stock_name        date        open        high  \\\n",
+       "0      AAPL2010-01-04       AAPL  2010-01-04    7.622500    7.660714   \n",
+       "1      ADBE2010-01-04       ADBE  2010-01-04   36.650002   37.299999   \n",
+       "2      AMZN2010-01-04       AMZN  2010-01-04    6.812500    6.830500   \n",
+       "3       CRM2010-01-04        CRM  2010-01-04   18.652500   18.882500   \n",
+       "4      CSCO2010-01-04       CSCO  2010-01-04   24.110001   24.840000   \n",
+       "...               ...        ...         ...         ...         ...   \n",
+       "45083  MSFT2022-03-16       MSFT  2022-03-16  289.109985  294.570007   \n",
+       "45084  NFLX2022-03-16       NFLX  2022-03-16  348.200012  359.989990   \n",
+       "45085  NVDA2022-03-16       NVDA  2022-03-16  235.000000  245.970001   \n",
+       "45086  ORCL2022-03-16       ORCL  2022-03-16   81.000000   81.230003   \n",
+       "45087  TSLA2022-09-12       TSLA  2022-09-12  300.720001  305.489990   \n",
+       "\n",
+       "              low       close   adj_close     volume  __index_level_0__  \n",
+       "0        7.585000    7.643214    6.515213  493729600                  0  \n",
+       "1       36.650002   37.090000   37.090000    4710200                  0  \n",
+       "2        6.657000    6.695000    6.695000  151998000                  0  \n",
+       "3       18.547501   18.705000   18.705000    7906000                  0  \n",
+       "4       24.010000   24.690001   17.394129   59853700                  0  \n",
+       "...           ...         ...         ...        ...                ...  \n",
+       "45083  283.200012  294.390015  292.260193   37826300               3071  \n",
+       "45084  343.059998  357.529999  357.529999    6982500               3071  \n",
+       "45085  231.720001  244.960007  244.772858   67142200               3071  \n",
+       "45086   77.750000   79.959999   78.593552   14071300               3071  \n",
+       "45087  300.399994  304.420013  304.420013   48674600               3071  \n",
+       "\n",
+       "[45088 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# query Stock file from bq\n",
     "STOCK_DATASET_ID = 'tech_stocks_world_events'\n",
@@ -344,10 +561,286 @@
     "df = result.to_dataframe()\n",
     "\n",
     "# read to csv file\n",
-    "df.to_csv(os.path.join(data_dir, 'stocks.csv'), header=True)\n",
+    "stock_file = 'stocks.csv'\n",
+    "df.to_csv(os.path.join(data_dir, stock_file), header=True, index=False)\n",
     "\n",
-    "# print(stocks_df.dtypes)\n",
-    "# stocks_df\n"
+    "# read stocks.csv\n",
+    "stocks_df = pd.read_csv(os.path.join(data_dir, stock_file), header=0)\n",
+    "\n",
+    "stocks_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sd_id                 object\n",
+      "stock_name            object\n",
+      "date                  object\n",
+      "open                 float64\n",
+      "high                 float64\n",
+      "low                  float64\n",
+      "close                float64\n",
+      "adj_close            float64\n",
+      "volume                 int64\n",
+      "__index_level_0__      int64\n",
+      "year                  object\n",
+      "month                 object\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sd_id</th>\n",
+       "      <th>stock_name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>__index_level_0__</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL2010-01-04</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>04</td>\n",
+       "      <td>7.622500</td>\n",
+       "      <td>7.660714</td>\n",
+       "      <td>7.585000</td>\n",
+       "      <td>7.643214</td>\n",
+       "      <td>6.515213</td>\n",
+       "      <td>493729600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADBE2010-01-04</td>\n",
+       "      <td>ADBE</td>\n",
+       "      <td>04</td>\n",
+       "      <td>36.650002</td>\n",
+       "      <td>37.299999</td>\n",
+       "      <td>36.650002</td>\n",
+       "      <td>37.090000</td>\n",
+       "      <td>37.090000</td>\n",
+       "      <td>4710200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMZN2010-01-04</td>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>04</td>\n",
+       "      <td>6.812500</td>\n",
+       "      <td>6.830500</td>\n",
+       "      <td>6.657000</td>\n",
+       "      <td>6.695000</td>\n",
+       "      <td>6.695000</td>\n",
+       "      <td>151998000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CRM2010-01-04</td>\n",
+       "      <td>CRM</td>\n",
+       "      <td>04</td>\n",
+       "      <td>18.652500</td>\n",
+       "      <td>18.882500</td>\n",
+       "      <td>18.547501</td>\n",
+       "      <td>18.705000</td>\n",
+       "      <td>18.705000</td>\n",
+       "      <td>7906000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CSCO2010-01-04</td>\n",
+       "      <td>CSCO</td>\n",
+       "      <td>04</td>\n",
+       "      <td>24.110001</td>\n",
+       "      <td>24.840000</td>\n",
+       "      <td>24.010000</td>\n",
+       "      <td>24.690001</td>\n",
+       "      <td>17.394129</td>\n",
+       "      <td>59853700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45083</th>\n",
+       "      <td>MSFT2022-03-16</td>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>16</td>\n",
+       "      <td>289.109985</td>\n",
+       "      <td>294.570007</td>\n",
+       "      <td>283.200012</td>\n",
+       "      <td>294.390015</td>\n",
+       "      <td>292.260193</td>\n",
+       "      <td>37826300</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45084</th>\n",
+       "      <td>NFLX2022-03-16</td>\n",
+       "      <td>NFLX</td>\n",
+       "      <td>16</td>\n",
+       "      <td>348.200012</td>\n",
+       "      <td>359.989990</td>\n",
+       "      <td>343.059998</td>\n",
+       "      <td>357.529999</td>\n",
+       "      <td>357.529999</td>\n",
+       "      <td>6982500</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45085</th>\n",
+       "      <td>NVDA2022-03-16</td>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>16</td>\n",
+       "      <td>235.000000</td>\n",
+       "      <td>245.970001</td>\n",
+       "      <td>231.720001</td>\n",
+       "      <td>244.960007</td>\n",
+       "      <td>244.772858</td>\n",
+       "      <td>67142200</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45086</th>\n",
+       "      <td>ORCL2022-03-16</td>\n",
+       "      <td>ORCL</td>\n",
+       "      <td>16</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>81.230003</td>\n",
+       "      <td>77.750000</td>\n",
+       "      <td>79.959999</td>\n",
+       "      <td>78.593552</td>\n",
+       "      <td>14071300</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45087</th>\n",
+       "      <td>TSLA2022-09-12</td>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>12</td>\n",
+       "      <td>300.720001</td>\n",
+       "      <td>305.489990</td>\n",
+       "      <td>300.399994</td>\n",
+       "      <td>304.420013</td>\n",
+       "      <td>304.420013</td>\n",
+       "      <td>48674600</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45088 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                sd_id stock_name date        open        high         low  \\\n",
+       "0      AAPL2010-01-04       AAPL   04    7.622500    7.660714    7.585000   \n",
+       "1      ADBE2010-01-04       ADBE   04   36.650002   37.299999   36.650002   \n",
+       "2      AMZN2010-01-04       AMZN   04    6.812500    6.830500    6.657000   \n",
+       "3       CRM2010-01-04        CRM   04   18.652500   18.882500   18.547501   \n",
+       "4      CSCO2010-01-04       CSCO   04   24.110001   24.840000   24.010000   \n",
+       "...               ...        ...  ...         ...         ...         ...   \n",
+       "45083  MSFT2022-03-16       MSFT   16  289.109985  294.570007  283.200012   \n",
+       "45084  NFLX2022-03-16       NFLX   16  348.200012  359.989990  343.059998   \n",
+       "45085  NVDA2022-03-16       NVDA   16  235.000000  245.970001  231.720001   \n",
+       "45086  ORCL2022-03-16       ORCL   16   81.000000   81.230003   77.750000   \n",
+       "45087  TSLA2022-09-12       TSLA   12  300.720001  305.489990  300.399994   \n",
+       "\n",
+       "            close   adj_close     volume  __index_level_0__  year month  \n",
+       "0        7.643214    6.515213  493729600                  0  2010    01  \n",
+       "1       37.090000   37.090000    4710200                  0  2010    01  \n",
+       "2        6.695000    6.695000  151998000                  0  2010    01  \n",
+       "3       18.705000   18.705000    7906000                  0  2010    01  \n",
+       "4       24.690001   17.394129   59853700                  0  2010    01  \n",
+       "...           ...         ...        ...                ...   ...   ...  \n",
+       "45083  294.390015  292.260193   37826300               3071  2022    03  \n",
+       "45084  357.529999  357.529999    6982500               3071  2022    03  \n",
+       "45085  244.960007  244.772858   67142200               3071  2022    03  \n",
+       "45086   79.959999   78.593552   14071300               3071  2022    03  \n",
+       "45087  304.420013  304.420013   48674600               3071  2022    09  \n",
+       "\n",
+       "[45088 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stocks_df[['year', 'month', 'date']] = stocks_df.date.str.split(\"-\", expand=True)\n",
+    "\n",
+    "\n",
+    "print(stocks_df.dtypes)\n",
+    "stocks_df"
    ]
   }
  ],
