--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "[45088 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,28 +572,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sd_id                 object\n",
-      "stock_name            object\n",
-      "date                  object\n",
-      "open                 float64\n",
-      "high                 float64\n",
-      "low                  float64\n",
-      "close                float64\n",
-      "adj_close            float64\n",
-      "volume                 int64\n",
-      "__index_level_0__      int64\n",
-      "year                  object\n",
-      "month                 object\n",
-      "dtype: object\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -830,17 +811,245 @@
        "[45088 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# split date column to year, month, date columns \n",
     "stocks_df[['year', 'month', 'date']] = stocks_df.date.str.split(\"-\", expand=True)\n",
+    "stocks_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stock_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>__index_level_0__</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>9.284201</td>\n",
+       "      <td>9.370315</td>\n",
+       "      <td>9.173129</td>\n",
+       "      <td>9.280088</td>\n",
+       "      <td>7.910513</td>\n",
+       "      <td>5.993053e+08</td>\n",
+       "      <td>125.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>13.002194</td>\n",
+       "      <td>13.122270</td>\n",
+       "      <td>12.867775</td>\n",
+       "      <td>13.000154</td>\n",
+       "      <td>11.081564</td>\n",
+       "      <td>4.922990e+08</td>\n",
+       "      <td>377.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>20.594740</td>\n",
+       "      <td>20.779479</td>\n",
+       "      <td>20.354327</td>\n",
+       "      <td>20.573204</td>\n",
+       "      <td>17.579520</td>\n",
+       "      <td>5.278568e+08</td>\n",
+       "      <td>628.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>16.897433</td>\n",
+       "      <td>17.058533</td>\n",
+       "      <td>16.723111</td>\n",
+       "      <td>16.879817</td>\n",
+       "      <td>14.713781</td>\n",
+       "      <td>4.064348e+08</td>\n",
+       "      <td>879.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>23.054958</td>\n",
+       "      <td>23.253166</td>\n",
+       "      <td>22.868885</td>\n",
+       "      <td>23.066164</td>\n",
+       "      <td>20.592402</td>\n",
+       "      <td>2.526109e+08</td>\n",
+       "      <td>1131.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>30.043938</td>\n",
+       "      <td>30.311131</td>\n",
+       "      <td>29.715774</td>\n",
+       "      <td>30.010000</td>\n",
+       "      <td>27.249668</td>\n",
+       "      <td>2.073976e+08</td>\n",
+       "      <td>1383.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>26.126944</td>\n",
+       "      <td>26.356796</td>\n",
+       "      <td>25.922569</td>\n",
+       "      <td>26.151002</td>\n",
+       "      <td>24.237950</td>\n",
+       "      <td>1.536901e+08</td>\n",
+       "      <td>1635.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>37.611225</td>\n",
+       "      <td>37.851514</td>\n",
+       "      <td>37.371912</td>\n",
+       "      <td>37.637769</td>\n",
+       "      <td>35.542361</td>\n",
+       "      <td>1.085383e+08</td>\n",
+       "      <td>1887.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>47.277859</td>\n",
+       "      <td>47.748526</td>\n",
+       "      <td>46.795877</td>\n",
+       "      <td>47.263357</td>\n",
+       "      <td>45.312169</td>\n",
+       "      <td>1.360803e+08</td>\n",
+       "      <td>2138.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>51.967272</td>\n",
+       "      <td>52.457927</td>\n",
+       "      <td>51.567907</td>\n",
+       "      <td>52.063988</td>\n",
+       "      <td>50.702360</td>\n",
+       "      <td>1.121228e+08</td>\n",
+       "      <td>2389.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>95.267668</td>\n",
+       "      <td>96.661769</td>\n",
+       "      <td>93.912796</td>\n",
+       "      <td>95.347075</td>\n",
+       "      <td>93.916394</td>\n",
+       "      <td>1.575646e+08</td>\n",
+       "      <td>2642.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>140.861866</td>\n",
+       "      <td>142.347818</td>\n",
+       "      <td>139.474087</td>\n",
+       "      <td>140.989365</td>\n",
+       "      <td>139.800847</td>\n",
+       "      <td>9.052463e+07</td>\n",
+       "      <td>2894.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   stock_name  year        open        high         low       close  \\\n",
+       "0        AAPL  2010    9.284201    9.370315    9.173129    9.280088   \n",
+       "1        AAPL  2011   13.002194   13.122270   12.867775   13.000154   \n",
+       "2        AAPL  2012   20.594740   20.779479   20.354327   20.573204   \n",
+       "3        AAPL  2013   16.897433   17.058533   16.723111   16.879817   \n",
+       "4        AAPL  2014   23.054958   23.253166   22.868885   23.066164   \n",
+       "5        AAPL  2015   30.043938   30.311131   29.715774   30.010000   \n",
+       "6        AAPL  2016   26.126944   26.356796   25.922569   26.151002   \n",
+       "7        AAPL  2017   37.611225   37.851514   37.371912   37.637769   \n",
+       "8        AAPL  2018   47.277859   47.748526   46.795877   47.263357   \n",
+       "9        AAPL  2019   51.967272   52.457927   51.567907   52.063988   \n",
+       "10       AAPL  2020   95.267668   96.661769   93.912796   95.347075   \n",
+       "11       AAPL  2021  140.861866  142.347818  139.474087  140.989365   \n",
+       "\n",
+       "     adj_close        volume  __index_level_0__  \n",
+       "0     7.910513  5.993053e+08              125.5  \n",
+       "1    11.081564  4.922990e+08              377.5  \n",
+       "2    17.579520  5.278568e+08              628.5  \n",
+       "3    14.713781  4.064348e+08              879.5  \n",
+       "4    20.592402  2.526109e+08             1131.5  \n",
+       "5    27.249668  2.073976e+08             1383.5  \n",
+       "6    24.237950  1.536901e+08             1635.5  \n",
+       "7    35.542361  1.085383e+08             1887.0  \n",
+       "8    45.312169  1.360803e+08             2138.0  \n",
+       "9    50.702360  1.121228e+08             2389.5  \n",
+       "10   93.916394  1.575646e+08             2642.0  \n",
+       "11  139.800847  9.052463e+07             2894.5  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calculate avg stock price per company per year\n",
+    "avg_stock_price_per_year = stocks_df.groupby(['stock_name', 'year']).mean()\n",
     "\n",
+    "avg_stock_price_per_year = avg_stock_price_per_year.reset_index()\n",
     "\n",
-    "print(stocks_df.dtypes)\n",
-    "stocks_df"
+    "avg_stock_price_per_year.head(12)"
    ]
   }
  ],
