load avg_stock_price to bq

--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -824,9 +824,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stock_name            object\n",
+      "year                   int64\n",
+      "open                 float64\n",
+      "high                 float64\n",
+      "low                  float64\n",
+      "close                float64\n",
+      "adj_close            float64\n",
+      "volume               float64\n",
+      "__index_level_0__    float64\n",
+      "dtype: object\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1038,7 +1054,7 @@
        "11  139.800847  9.052463e+07             2894.5  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,8 +1064,37 @@
     "avg_stock_price_per_year = stocks_df.groupby(['stock_name', 'year']).mean()\n",
     "\n",
     "avg_stock_price_per_year = avg_stock_price_per_year.reset_index()\n",
+    "avg_stock_price_per_year['year'] = avg_stock_price_per_year['year'].astype('int')\n",
     "\n",
+    "print(avg_stock_price_per_year.dtypes)\n",
     "avg_stock_price_per_year.head(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STOCK_METADATA = {\n",
+    "    'avg_stock_price_per_year': {\n",
+    "        'table_name': 'avg_stock_price_per_year',\n",
+    "        'schema': [\n",
+    "            bigquery.SchemaField(\"stock_name\", \"STRING\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"year\", \"INTEGER\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"open\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"high\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"low\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"close\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"adj_close\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"volume\", \"FLOAT\", mode=\"REQUIRED\"),\n",
+    "            bigquery.SchemaField(\"__index_level_0__\", \"FLOAT\", mode=\"REQUIRED\")]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "table_name = f\"{PROJECT_ID}.{DATASET_ID}.{STOCK_METADATA['avg_stock_price_per_year']['table_name']}\"\n",
+    "schema = STOCK_METADATA['avg_stock_price_per_year']['schema']\n",
+    "load_table(avg_stock_price_per_year, client, table_name, schema)"
    ]
   }
  ],
