Add sql code for the Looker query

--- a/rg_work_test.ipynb
+++ b/rg_work_test.ipynb
@@ -676,6 +676,37 @@
     "\n",
     "test.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "--This is the query I used for the Looker table\n",
+    "\n",
+    "with stocks as (\n",
+    "  Select CONCAT(year, month) as ym, year, month, stock_name, avg(open + high + low + close) as avg_price\n",
+    "  from `team-week-3.tech_stocks_world_events.stocks`\n",
+    "  Group BY ym, stock_name, year, month),\n",
+    "\n",
+    "m2 as (\n",
+    "  Select CONCAT(year, month) as ym, m2_supply\n",
+    "  from `team-week-3.tech_stocks_world_events.m2_supply`\n",
+    "  Group BY ym, m2_supply),\n",
+    "\n",
+    "combined as (SELECT stocks.ym, stocks.year, stocks.month, stocks.stock_name, stocks.avg_price, m2.m2_supply\n",
+    "from stocks\n",
+    "INNER JOIN m2\n",
+    "ON stocks.ym = m2.ym)\n",
+    "\n",
+    "SELECT year, month, stock_name, avg_price, m2_supply\n",
+    "FROM combined;"
+   ]
   }
  ],
  "metadata": {
