working in Looker and updated SQL query

--- a/rg_work_test.ipynb
+++ b/rg_work_test.ipynb
@@ -690,7 +690,7 @@
     "--This is the query I used for the Looker table\n",
     "\n",
     "with stocks as (\n",
-    "  Select CONCAT(year, month) as ym, year, month, stock_name, avg(open + high + low + close) as avg_price\n",
+    "  Select CONCAT(year, month) as ym, year, month, stock_name, (avg(open) + avg(high) + avg(low) + avg(close))/4 as avg_price\n",
     "  from `team-week-3.tech_stocks_world_events.stocks`\n",
     "  Group BY ym, stock_name, year, month),\n",
     "\n",
