Add code for the gas transformations and create table

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -707,6 +707,74 @@
     "SELECT year, month, stock_name, avg_price, m2_supply\n",
     "FROM combined;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     year  month  all_grade_prices  reg_grade_prices  mid_grade_prices  \\\n",
+      "0    1995      1           1.13000           1.08180           1.17360   \n",
+      "1    1995      2           1.12025           1.07250           1.16475   \n",
+      "2    1995      3           1.11850           1.07200           1.16125   \n",
+      "3    1995      4           1.15725           1.11125           1.19875   \n",
+      "4    1995      5           1.22520           1.17840           1.26840   \n",
+      "..    ...    ...               ...               ...               ...   \n",
+      "308  2020      9           2.27350           2.18275           2.59725   \n",
+      "309  2020     10           2.24825           2.15800           2.57150   \n",
+      "310  2020     11           2.19980           2.10820           2.52940   \n",
+      "311  2020     12           2.28350           2.19525           2.59600   \n",
+      "312  2021      1           2.42025           2.33425           2.71900   \n",
+      "\n",
+      "     prem_grade_prices  \n",
+      "0              1.27480  \n",
+      "1              1.26475  \n",
+      "2              1.25800  \n",
+      "3              1.29475  \n",
+      "4              1.36420  \n",
+      "..                 ...  \n",
+      "308            2.84750  \n",
+      "309            2.82175  \n",
+      "310            2.78220  \n",
+      "311            2.85025  \n",
+      "312            2.97525  \n",
+      "\n",
+      "[313 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "from google.cloud.exceptions import NotFound\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "\n",
+    "data_dir = '../data'\n",
+    "\n",
+    "gdf = pd.read_csv(os.path.join(data_dir, 'PET_PRI_GND_DCUS_NUS_W.csv'),header=0)\n",
+    "gdf = gdf[['Date', 'A1', 'R1', 'M1', 'P1']]\n",
+    "gdf = gdf.rename(columns={'Date': 'date', 'A1':'all_grade_prices', 'R1':'reg_grade_prices', 'M1':'mid_grade_prices', 'P1':'prem_grade_prices'})\n",
+    "\n",
+    "gdf['date'] = pd.to_datetime(gdf['date'], format='%m/%d/%Y')\n",
+    "\n",
+    "gdf.insert(0,'month', gdf['date'].dt.month)\n",
+    "gdf.insert(0,'year', gdf['date'].dt.year)\n",
+    "\n",
+    "gdf = gdf.groupby(['year','month']).agg({'all_grade_prices': 'mean', 'reg_grade_prices': 'mean', 'mid_grade_prices': 'mean', 'prem_grade_prices': 'mean'})\n",
+    "gdf = gdf.reset_index()\n",
+    "print(gdf)"
+   ]
   }
  ],
  "metadata": {
