delete unused code

--- a/cl_edits.ipynb
+++ b/cl_edits.ipynb
@@ -291,7 +291,7 @@
     "# credentials = service_account.Credentials.from_service_account_file(key_path, \n",
     "#                                                               scopes=[\"https://www.googleapis.com/auth/cloud-platform\"])\n",
     "\n",
-    "client = bigquery.Client(project=PROJECT_NAME)\n",
+    "client = bigquery.Client(project=PROJECT_ID)\n",
     "\n",
     "print(\"Successfully created a BiqQuery client\")\n",
     "print(f\"Project: {client.project}\")\n",
