Add SQL code for the gas prices vs stocks Looker graph

--- a/rg_work_test.ipynb
+++ b/rg_work_test.ipynb
@@ -710,6 +710,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Looker Query for gas prices against stocks/bitcoin\n",
+    "\n",
+    "with stocks as (\n",
+    "  Select CONCAT(year, month) as ym, year, month, stock_name, (avg(open) + avg(high) + avg(low) + avg(close))/4 as avg_price\n",
+    "  from `team-week-3.tech_stocks_world_events.stocks`\n",
+    "  Group BY ym, stock_name, year, month),\n",
+    "\n",
+    "gas as (\n",
+    "  Select year, month, 'gas' as stock_name, avg(all_grade_prices) as avg_price\n",
+    "  from `team-week-3.tech_stocks_world_events.gas_prices`\n",
+    "  Group BY year, month),\n",
+    "\n",
+    "combined as (SELECT stocks.year, stocks.month, stocks.stock_name, stocks.avg_price FROM stocks\n",
+    "UNION ALL\n",
+    "SELECT gas.year, gas.month, gas.stock_name, gas.avg_price FROM gas)\n",
+    "\n",
+    "SELECT year, month, stock_name, avg_price\n",
+    "FROM combined;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "vscode": {
