remove code from rg_work_test notebook to leave only spark code

--- a/rg_work_test.ipynb
+++ b/rg_work_test.ipynb
@@ -496,14 +496,8 @@
     "PROJECT_NAME = 'team-week-3'\n",
     "DATASET_NAME = 'tech_stocks_world_events'\n",
     "\n",
-    "key_path = \"/Users/Ruben/Desktop/google_cred/.cred/team_project_3/team-week-3-2f1d10dceea4.json\"\n",
-    "\n",
-    "credentials = service_account.Credentials.from_service_account_file(\n",
-    "    key_path, scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
-    ")\n",
-    "\n",
     "#create bigquery client\n",
-    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
+    "client = bigquery.Client()\n",
     "\n",
     "#create dataset_id and table_ids\n",
     "dataset_id = f\"{PROJECT_NAME}.{DATASET_NAME}\"\n",
@@ -563,76 +557,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[34m2023-02-14 10:36:12,691\u001b[0m] {\u001b[34mvariable.py:\u001b[0m272} ERROR\u001b[0m - Unable to retrieve variable from secrets backend (MetastoreBackend). Checking subsequent secrets backend.\u001b[0m\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1706, in _execute_context\n",
-      "    cursor, statement, parameters, context\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/default.py\", line 716, in do_execute\n",
-      "    cursor.execute(statement, parameters)\n",
-      "sqlite3.OperationalError: no such table: variable\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/models/variable.py\", line 265, in get_variable_from_secrets\n",
-      "    var_val = secrets_backend.get_variable(key=key)\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/utils/session.py\", line 71, in wrapper\n",
-      "    return func(*args, session=session, **kwargs)\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/airflow/secrets/metastore.py\", line 63, in get_variable\n",
-      "    var_value = session.query(Variable).filter(Variable.key == key).first()\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/query.py\", line 2734, in first\n",
-      "    return self.limit(1)._iter().first()\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/query.py\", line 2821, in _iter\n",
-      "    execution_options={\"_sa_orm_load_options\": self.load_options},\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/orm/session.py\", line 1670, in execute\n",
-      "    result = conn._execute_20(statement, params or {}, execution_options)\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1520, in _execute_20\n",
-      "    return meth(self, args_10style, kwargs_10style, execution_options)\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/sql/elements.py\", line 314, in _execute_on_connection\n",
-      "    self, multiparams, params, execution_options\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1399, in _execute_clauseelement\n",
-      "    cache_hit=cache_hit,\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1749, in _execute_context\n",
-      "    e, statement, parameters, cursor, context\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1930, in _handle_dbapi_exception\n",
-      "    sqlalchemy_exception, with_traceback=exc_info[2], from_=e\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/util/compat.py\", line 211, in raise_\n",
-      "    raise exception\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/base.py\", line 1706, in _execute_context\n",
-      "    cursor, statement, parameters, context\n",
-      "  File \"/Users/Ruben/Desktop/team-week3/venv/lib/python3.7/site-packages/sqlalchemy/engine/default.py\", line 716, in do_execute\n",
-      "    cursor.execute(statement, parameters)\n",
-      "sqlalchemy.exc.OperationalError: (sqlite3.OperationalError) no such table: variable\n",
-      "[SQL: SELECT variable.val AS variable_val, variable.id AS variable_id, variable.\"key\" AS variable_key, variable.description AS variable_description, variable.is_encrypted AS variable_is_encrypted \n",
-      "FROM variable \n",
-      "WHERE variable.\"key\" = ?\n",
-      " LIMIT ? OFFSET ?]\n",
-      "[parameters: ('config_file', 1, 0)]\n",
-      "(Background on this error at: http://sqlalche.me/e/14/e3q8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import yaml\n",
-    "from airflow.models import Variable\n",
-    "from airflow.hooks.filesystem import FSHook\n",
-    "\n",
-    "_default_config_path = './config.yml'\n",
-    "CONF_PATH = Variable.get('config_file', default_var=_default_config_path)\n",
-    "config: dict = {}\n",
-    "with open(CONF_PATH) as open_yaml:\n",
-    "    config: dict =  yaml.full_load(open_yaml)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 188,
    "metadata": {},
    "outputs": [
@@ -675,135 +599,6 @@
     "test = sparkql.read.parquet(os.path.join(data_dir,filepath))\n",
     "\n",
     "test.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "--This is the query I used for the Looker table\n",
-    "\n",
-    "with stocks as (\n",
-    "  Select CONCAT(year, month) as ym, year, month, stock_name, (avg(open) + avg(high) + avg(low) + avg(close))/4 as avg_price\n",
-    "  from `team-week-3.tech_stocks_world_events.stocks`\n",
-    "  Group BY ym, stock_name, year, month),\n",
-    "\n",
-    "m2 as (\n",
-    "  Select CONCAT(year, month) as ym, m2_supply\n",
-    "  from `team-week-3.tech_stocks_world_events.m2_supply`\n",
-    "  Group BY ym, m2_supply),\n",
-    "\n",
-    "combined as (SELECT stocks.ym, stocks.year, stocks.month, stocks.stock_name, stocks.avg_price, m2.m2_supply\n",
-    "from stocks\n",
-    "INNER JOIN m2\n",
-    "ON stocks.ym = m2.ym)\n",
-    "\n",
-    "SELECT year, month, stock_name, avg_price, m2_supply\n",
-    "FROM combined;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- Looker Query for gas prices against stocks/bitcoin\n",
-    "\n",
-    "with stocks as (\n",
-    "  Select CONCAT(year, month) as ym, year, month, stock_name, (avg(open) + avg(high) + avg(low) + avg(close))/4 as avg_price\n",
-    "  from `team-week-3.tech_stocks_world_events.stocks`\n",
-    "  Group BY ym, stock_name, year, month),\n",
-    "\n",
-    "gas as (\n",
-    "  Select year, month, 'gas' as stock_name, avg(all_grade_prices) as avg_price\n",
-    "  from `team-week-3.tech_stocks_world_events.gas_prices`\n",
-    "  Group BY year, month),\n",
-    "\n",
-    "combined as (SELECT stocks.year, stocks.month, stocks.stock_name, stocks.avg_price FROM stocks\n",
-    "UNION ALL\n",
-    "SELECT gas.year, gas.month, gas.stock_name, gas.avg_price FROM gas)\n",
-    "\n",
-    "SELECT year, month, stock_name, avg_price\n",
-    "FROM combined;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     year  month  all_grade_prices  reg_grade_prices  mid_grade_prices  \\\n",
-      "0    1995      1           1.13000           1.08180           1.17360   \n",
-      "1    1995      2           1.12025           1.07250           1.16475   \n",
-      "2    1995      3           1.11850           1.07200           1.16125   \n",
-      "3    1995      4           1.15725           1.11125           1.19875   \n",
-      "4    1995      5           1.22520           1.17840           1.26840   \n",
-      "..    ...    ...               ...               ...               ...   \n",
-      "308  2020      9           2.27350           2.18275           2.59725   \n",
-      "309  2020     10           2.24825           2.15800           2.57150   \n",
-      "310  2020     11           2.19980           2.10820           2.52940   \n",
-      "311  2020     12           2.28350           2.19525           2.59600   \n",
-      "312  2021      1           2.42025           2.33425           2.71900   \n",
-      "\n",
-      "     prem_grade_prices  \n",
-      "0              1.27480  \n",
-      "1              1.26475  \n",
-      "2              1.25800  \n",
-      "3              1.29475  \n",
-      "4              1.36420  \n",
-      "..                 ...  \n",
-      "308            2.84750  \n",
-      "309            2.82175  \n",
-      "310            2.78220  \n",
-      "311            2.85025  \n",
-      "312            2.97525  \n",
-      "\n",
-      "[313 rows x 6 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account\n",
-    "from google.cloud.exceptions import NotFound\n",
-    "import os\n",
-    "from datetime import datetime\n",
-    "\n",
-    "data_dir = '../data'\n",
-    "\n",
-    "gdf = pd.read_csv(os.path.join(data_dir, 'PET_PRI_GND_DCUS_NUS_W.csv'),header=0)\n",
-    "gdf = gdf[['Date', 'A1', 'R1', 'M1', 'P1']]\n",
-    "gdf = gdf.rename(columns={'Date': 'date', 'A1':'all_grade_prices', 'R1':'reg_grade_prices', 'M1':'mid_grade_prices', 'P1':'prem_grade_prices'})\n",
-    "\n",
-    "gdf['date'] = pd.to_datetime(gdf['date'], format='%m/%d/%Y')\n",
-    "\n",
-    "gdf.insert(0,'month', gdf['date'].dt.month)\n",
-    "gdf.insert(0,'year', gdf['date'].dt.year)\n",
-    "\n",
-    "gdf = gdf.groupby(['year','month']).agg({'all_grade_prices': 'mean', 'reg_grade_prices': 'mean', 'mid_grade_prices': 'mean', 'prem_grade_prices': 'mean'})\n",
-    "gdf = gdf.reset_index()\n",
-    "print(gdf)"
    ]
   }
  ],
